# ChangeLog for dev-python/pygments
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pygments/ChangeLog,v 1.12 2008/05/25 06:39:07 corsair Exp $

  25 May 2008; Markus Rothe <corsair@gentoo.org> pygments-0.9.ebuild:
  Stable on ppc64

  22 Dec 2007; nixnut <nixnut@gentoo.org> pygments-0.9.ebuild:
  Added ~ppc wrt bug 198989

  13 Nov 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -pygments-0.8.1.ebuild, pygments-0.9.ebuild:
  Added setuptools dep and call to distutils_src_unpack (bug #199060),
  cleanup. Dropped old version.

  13 Nov 2007; Raúl Porcel <armin76@gentoo.org> pygments-0.9.ebuild:
  Add ~alpha/~ia64 wrt #198989

  13 Nov 2007; Jeroen Roovers <jer@gentoo.org> pygments-0.9.ebuild:
  Marked ~hppa (bug #198989).

  13 Nov 2007; Ferris McCormick <fmccor@gentoo.org> pygments-0.9.ebuild:
  Add ~sparc, Bug #198989, but see comments in bugzilla.

*pygments-0.9 (14 Oct 2007)

  14 Oct 2007; Rob Cakebread <pythonhead@gentoo.org> pygments-0.8.1.ebuild,
  +pygments-0.9.ebuild:
  Version bump. Removed superfluous PYTHON_MODULE

*pygments-0.8.1 (28 Jun 2007)

  28 Jun 2007; Rob Cakebread <pythonhead@gentoo.org> -pygments-0.8.ebuild,
  +pygments-0.8.1.ebuild:
  Version bump, removed old version.

  18 Jun 2007; Markus Rothe <corsair@gentoo.org> pygments-0.8.ebuild:
  Added ~ppc64

*pygments-0.8 (30 May 2007)

  30 May 2007; Rob Cakebread <pythonhead@gentoo.org>
  -files/pygments-0.7.1-_mapping.py-ebuild.patch,
  -files/pygments-0.7.1-html_formatter.patch,
  -files/pygments-0.7.1-other.py-ebuild.patch,
  +files/pygments-0.8-_mapping.py-ebuild.patch,
  +files/pygments-0.8-other.py-ebuild.patch, -pygments-0.7.1.ebuild,
  +pygments-0.8.ebuild:
  Version bump, removed old version.

  05 May 2007; Lukasz Strzygowski <lucass@gentoo.org> pygments-0.7.1.ebuild:
  Minor cleanup. Keyworded ~amd64 (bug #176459).

*pygments-0.7.1 (14 Apr 2007)

  14 Apr 2007; Rob Cakebread <pythonhead@gentoo.org>