@@ -1,6 +1,14 @@
 # ChangeLog for dev-python/pygments
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygments/ChangeLog,v 1.12 2008/05/25 06:39:07 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygments/ChangeLog,v 1.14 2008/05/27 18:40:03 hawking Exp $
+
+  27 May 2008; Ali Polatel <hawking@gentoo.org> pygments-0.10.ebuild:
+  Drop inherit eutils, not needed anymore.
+
+*pygments-0.10 (27 May 2008)
+
+  27 May 2008; Ali Polatel <hawking@gentoo.org> +pygments-0.10.ebuild:
+  Version bump.
 
   25 May 2008; Markus Rothe <corsair@gentoo.org> pygments-0.9.ebuild:
   Stable on ppc64
